; ModuleID = '/home/carl/AnghaBench/esp-idf/components/spi_flash/test/extr_test_spi_flash.c_setup_tests.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/spi_flash/test/extr_test_spi_flash.c_setup_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@start = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i8] c"Test data partition @ 0x%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @setup_tests to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_tests() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  %2 = load i64, i64* @start, align 8
  %3 = icmp eq i64 %2, 0
  br i1 %3, label %4, label %11

4:                                                ; preds = %0
  %5 = call %struct.TYPE_3__* (...) @get_test_data_partition()
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %1, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* @start, align 8
  %9 = load i64, i64* @start, align 8
  %10 = call i32 @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i64 %9)
  br label %11

11:                                               ; preds = %4, %0
  ret void
}

declare dso_local %struct.TYPE_3__* @get_test_data_partition(...) #1

declare dso_local i32 @printf(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
